# ezhno

./: CMakeLists.txt  LICENSE  README.md
include/ezhno/AST/: Arg.h  Assignment.h  Body.h  Decl.h  Expr.h  Function.h  Name.h  Stmt.h  Type.h  Value.h
include/ezhno/Basic/: TokenKind.h  TokenKinds.def
include/ezhno/CodeGen/: CodeGenerator.h
include/ezhno/Lex/: Lexer.h  Token.h
include/ezhno/Parse/: Parser.h
lib/Lex/: CMakeLists.txt  Lexer.cpp
lib/Parse/: CMakeLists.txt  ParseExpr.cpp  Parser.cpp
test/: Makefile  main  main.cpp
tests/: TU.ez
tests/Expr/: additive_expresion.ez
tools/: CMakeLists.txt
tools/ego/: CMakeLists.txt  bak.ego.cpp  ego.cpp
tools/ezhno/: CMakeLists.txt  ezhno.cpp
